--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": ["App/Http/Helpers/functions.php"]
     },
     "autoload-dev": {
         "psr-4": {
