--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "brian2694/laravel-toastr": "^5.57",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "realrashid/sweet-alert": "^7.0",
-        "yoeunes/toastr": "^2.3"
+        "realrashid/sweet-alert": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
